added links to soical network icons

--- a/src/components/Main/Main.styles.css
+++ b/src/components/Main/Main.styles.css
@@ -23,7 +23,10 @@
   margin-bottom: 1rem;
 }
 #main-section .social-network div{
-height: 30px;
+  height: 30px;
+}
+#main-section .social-network a {
+  color: #000000;
 }
 #main-section .social-network i {
   font-size: 1.6rem;
