--- a/src/components/Projects/Projects.styles.css
+++ b/src/components/Projects/Projects.styles.css
@@ -5,6 +5,8 @@
 
 #projects .card {
   color: #fff;
+  min-width: 300px;
+  max-width: 300px;
 }
 
 #projects .card .card-text {
@@ -59,4 +61,10 @@
 
 .carousel-control-next .carousel-control-next-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='242325' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e")
+}
+
+@media (min-width: 992px) {
+  .col-lg-6.pt-3 {
+    padding-top: 0!important;;
+  }
 }
