--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 .yellow-text {
   color: #EAC435
 }
@@ -37,15 +40,23 @@
 .purple-bkg {
   background-color: #5F5AA2;
 }
-.btn-main {
+.btn-warning {
   color: #fff;
   background-color: #EAC435;
   border-color: #EAC435;
+  -webkit-appearance: none;
 }
-.btn-main:hover {
+.btn-warning:hover {
   color: #fff;
   background-color: #cead39;
   border-color: #cead39;
+}
+
+.btn-warning:focus, .btn-warning.focus {
+  color: #fff;
+  background-color: #f5cb33;
+  border-color: #f5cb33;
+  box-shadow: 0 0 0 0.2rem rgba(245, 203, 51, 0.5);
 }
 .heading-line:before {
   content: "";
